objects/Territory2.object
<CustomObject>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>LEFT(TMS_Terr_Num__c,3)&amp;&quot;00&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TERRITORYID18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TERRITORYID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Market_Segment_Code__c</fullName>
        <label>TMS Market Segment Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Market_Segment_Desc__c</fullName>
        <label>TMS Market Segment Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Market_Segment_ID__c</fullName>
        <label>TMS Market Segment ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMS_New_Sales_Quota_Curr_Yr__c</fullName>
        <label>TMS New Sales Quota - Curr Yr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TMS_Parent_Territory_ID__c</fullName>
        <label>TMS Parent Territory ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMS_Ref_Function_Code__c</fullName>
        <label>TMS Ref Function Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Renewal_Sales_Quota_Curr_Yr__c</fullName>
        <label>TMS Renewal Sales Quota - Curr Yr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TMS_Rep_Function_Desc__c</fullName>
        <label>TMS Rep Function Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Rep_Function_ID__c</fullName>
        <label>TMS Rep Function ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMS_Sales_Force_Code__c</fullName>
        <label>TMS Sales Force Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Sales_Force_Desc__c</fullName>
        <label>TMS Sales Force Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Sales_Force_ID__c</fullName>
        <label>TMS Sales Force ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMS_Terr_Num__c</fullName>
        <label>TMS Terr Num</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Territory_ID__c</fullName>
        <label>TMS Territory ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TMS_Territory_Team_Role__c</fullName>
        <formula>TMS_Sales_Force_Desc__c+&apos;-&apos;+TMS_Market_Segment_Desc__c+&apos;-&apos;+TMS_Rep_Function_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TMS Territory Team Role</label>
        <type>Text</type>
    </fields>
</CustomObject>